--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a html="https://github.com/rajaasmi1/pdf-raja/blob/main/rajarajan%20full%20doc.pdf">Click Here Evert Info</a></p>
+  <p><a html="">Click Here Evert Info</a></p>
 </html>
